// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sparkline snapShot testing renders Sparkline correctly 1`] = `
<div
  className=
      ms-FocusZone
      &:focus {
        outline: none;
      }
      {
        display: inline;
      }
  data-focuszone-id="FocusZone0"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDownCapture={[Function]}
>
  <div
    className=

        {
          display: inline;
        }
  >
    <svg
      data-is-focusable={true}
      height={20}
      width={80}
    />
    <svg
      data-is-focusable={true}
      height={20}
      width={80}
    >
      <text
        className=

            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              fill: #000000;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 12px;
              font-weight: 400;
            }
        dx={8}
        dy={-5}
        x="0%"
        y="100%"
      >
        19.64
      </text>
    </svg>
  </div>
</div>
`;

exports[`Sparkline snapShot testing renders Sparkline correctly with no legend 1`] = `
<div
  className=
      ms-FocusZone
      &:focus {
        outline: none;
      }
      {
        display: inline;
      }
  data-focuszone-id="FocusZone1"
  onFocus={[Function]}
  onKeyDown={[Function]}
  onMouseDownCapture={[Function]}
>
  <div
    className=

        {
          display: inline;
        }
  >
    <svg
      data-is-focusable={true}
      height={20}
      width={80}
    />
  </div>
</div>
`;
